[ldsd] revised spec & implementation to avoid unnecessary wrappers
